@@ -1,0 +1,4 @@
+include_file = '''
+class (b)
+'''
+
